# zone-defense

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  README.md  com.github.justinrdonnelly.ZoneDefense.json  eslint.config.js  meson.build  package.json  test-networkState.js  test-seenNetworks.js  test-zoneForConnection.js  test-zoneInfo.js
data/: com.github.justinrdonnelly.ZoneDefense.desktop.in  com.github.justinrdonnelly.ZoneDefense.gschema.xml  com.github.justinrdonnelly.ZoneDefense.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: chooseZoneWindow.js  chooseZoneWindow.ui  com.github.justinrdonnelly.ZoneDefense.data.gresource.xml  com.github.justinrdonnelly.ZoneDefense.src.gresource.xml  connectionIdsSeen.js  dependencyCheck.js  errorSignal.js  main.js  meson.build  moreInfo.js  moreInfo.ui  networkManagerStateItemSuperTest.js  networkState.js  promisify.js  seenNetworks.js  window.js  window.ui  zoneForConnection.js  zoneInfo.js
src/networkManagerDbusInterfaces/: networkManagerConnectionActiveProxy.js  networkManagerDeviceProxy.js  networkManagerProxy.js
test/: README.md  test-connectionIdsSeen.js  test-networkState.js  test-seenNetworks.js  test-zoneForConnection.js  test-zoneInfo.js
